# sticker-encoders

./: .gitignore  Cargo.toml  shell.nix
nix/: rust.nix  sources.json
src/: lib.rs
src/categorical/: mod.rs
src/deprel/: error.rs  mod.rs  post_processing.rs  relative_pos.rs  relative_position.rs
src/layer/: error.rs  mod.rs
src/lemma/: edit_tree.rs  mod.rs
