[package]
name = "sticker-encoders"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Encoders for linguistic features"
homepage = "https://github.com/stickeritis/sticker-encoders"
edition = "2018"
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  ".envrc",
  "shell.nix",
]

[dependencies]
conllu = "0.3"
edit_tree = "0.1.1"
failure = "0.1"
numberer = "0.1"
ordered-float = "1"
petgraph = "0.4"
serde = "1"
serde_derive = "1"
