[package]
name = "sticker-encoders"
version = "0.5.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Encoders for linguistic features"
homepage = "https://github.com/stickeritis/sticker-encoders"
edition = "2018"
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  ".envrc",
  "shell.nix",
]

[dependencies]

conllx = {git = "https://github.com/twuebi/conllx-rs", rev="cddba60"}
numberer = "0.2"
ordered-float = "1"
petgraph =  {version="0.5", features=["serde-1"]}
serde = "1"
serde_derive = "1"
thiserror = "1"
